docs(test): 移除 dehaze-java 测试框架文档
移除 README-TEST.md 文件，该文件包含了 dehaze-java 项目的自动化测试框架设计
与实现文档，包括 JUnit 5 测试框架、Spring Boot Test 集成测试、数据权限测试等
详细说明和示例代码。